# presto

./: .gitignore  ANALYTICS.md  LICENSE.md  QUICK_SETUP.md  README.md  TESTING_RESET.md  THEMES.md  UPDATES.md  UPDATE_IMPLEMENTATION_SUMMARY.md  build-themes.js  debug-themes.js  debug_tauri.js  generate-keys.sh  package-lock.json  package.json  release.sh  setup-updates.sh  test_reset.js  test_shortcuts.js  verify-updates.sh
.github/workflows/: release-fast.yml  release.yml
src/: index.html  main-new.js  main-original.js  main.js  styles.css  version-global.js  version.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.backup
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: bar-chart.js  focus-trend.js  monthly-peak-day.js  peak-focus-time.js  update-notification.js
src/core/: pomodoro-timer.js
src/docs/: TEST_MANUAL.md  THEMES.md  UPDATER_SETUP.md  UPDATES.md
src/managers/: auth-manager.js  navigation-manager.js  session-manager.js  settings-manager.js  tag-manager.js  team-manager.js  update-manager-browser-compatible.js  update-manager-fixed.js  update-manager-global.js  update-manager-v2-corrected.js  update-manager-v2.js  update-manager.js
src/styles/: README.md  animations.css  calendar.css  controls.css  layout.css  main.css  minimal-timeline.css  modals.css  notifications.css  progress.css  responsive.css  session-timeline.css  settings-original.css  settings.css  shared-components.css  sidebar.css  smart-indicator.css  statistics-original.css  statistics.css  tasks.css  team-original.css  team.css  timeline.css  timer.css  variables.css
src/utils/: analytics.js  common-utils.js  supabase.js  tag-statistics.js  (+2 more)
(+10 files in other folders)
