[package]
name = "presto"
version = "0.1.5"
description = "A Tauri App"
authors = ["Stefano Novelli"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "presto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Ottimizzazioni per compilazione veloce
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = "s"  # Ottimizza per dimensione invece che velocità
lto = "thin"     # Link time optimization leggero
codegen-units = 1
panic = "abort"
strip = true     # Rimuove simboli debug

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = { version = "2", default-features = false }
tauri-plugin-global-shortcut = { version = "2", default-features = false }
tauri-plugin-dialog = { version = "2", default-features = false }
tauri-plugin-notification = { version = "2", default-features = false }
tauri-plugin-autostart = { version = "2", default-features = false }
tauri-plugin-updater = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = { version = "1", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"
libc = "0.2"

